tests/ts_syntax/deprecated/readonlyarray.js
type T = $ReadOnlyArray<number>; // error
